# Cuuri

./: .gitignore  README.md  deno.json  package-lock.json  package.json  vite.config.ts
.github/: dependabot.yml
.github/workflows/: actions.yml  build-common.yml  build.yml  cleanup-caches-by-a-branch.yml  cleanup-chaches-by-a-branch.yml  osv-scanner.yml  publish-to-auto-release.yml  publish-to-manual-release.yml  release.yml  rust-clippy.yml  test-build-only.yml
script/: update_cargo_version.py  update_tauri_version.py  update_version.sh
src/: App.vue  convertFileToBase64.ts  generateSessionId.ts  getApiKey.ts  getAvailableModels.ts  getChatGptResponse.ts  getChatHistory.ts  getDatabaseChatEntryBySession.ts  getDatabaseChatEntryFromRawDatabaseChatEntry.ts  getDatabaseChatEntryList.ts  getDefaultModel.ts  getRawChatsFromDatabaseChatEntries.ts  getSessionIdList.ts  main.ts  renderMarkdown.ts  router.ts  streamChatGptResponse.ts  types.ts
src-tauri/: Cargo.toml  diesel.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/2024-12-06-055825_chat_histories/: down.sql  up.sql
src-tauri/permissions/: allow-generate-session-id.toml  allow-get-available-models.toml  allow-rw-config-file.toml  allow-rw-db-file.toml
src-tauri/src/: app_type.rs  commands.rs  config.rs  database.rs  establish_connection.rs  generate_session_id.rs  get_available_models.rs  get_chat_history.rs  get_chat_history_by_session.rs  get_chatgpt_response.rs  get_config.rs  get_database_path.rs  get_db_connection.rs  get_default_model.rs  get_openai_api_key.rs  get_session_id_list.rs  init_config_file.rs  lib.rs  main.rs  models.rs  run_migrations.rs  schema.rs  set_openai_api_key.rs  stream_chatgpt_response.rs
src/components/: ApiKeyDialog.vue  ChatHIstory.vue  ChatHistory.vue  ChatInputForm.vue  ChatSessions.vue  FileSelector.vue  ModelSelector.vue  NewSessionButton.vue  SessionList.vue
src/view/: HomeView.vue  SettingsView.vue
