[package]
name = "Cuuri"
version = "0.2.3"
description = "Cuuri is a GUI client for ChatGPT built with Tauri, Vue, and TypeScript. "
authors = ["takanotume24 <takanotume24@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "cuuri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12.9", features = ["json"] }
tokio = "1.42.0"
uuid = { version = "1.11.0", features = ["v4"] }
diesel = { version = "2.2.6", features = ["sqlite", "r2d2", "chrono"] }
chrono = { version = "0.4.39", features = ["serde"] }
dirs = "5.0.1"
toml = "0.8.19"
rusqlite = { version = "0.32.1", features = ["bundled"] }
diesel_migrations = "2.2.0"
