[package]
name = "Cuuri"
version = "0.2.5"
description = "Cuuri is a GUI client for ChatGPT built with Tauri, Vue, and TypeScript. "
authors = ["takanotume24 <takanotume24@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "cuuri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.4.1", features = [] }
tauri-build = "2.2.0"
tauri-plugin = "2.2.0"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12.15", features = ["json"] }
tokio = "1.45.1"
uuid = { version = "1.16.0", features = ["v4"] }
diesel = { version = "2.2.9", features = ["sqlite", "r2d2", "chrono"] }
chrono = { version = "0.4.41", features = ["serde"] }
dirs = "6.0.0"
toml = "0.8.23"
rusqlite = { version = "0.34.0", features = ["bundled"] }
diesel_migrations = "2.2.0"
